syntax = "proto3";

package driftpursuit.networking.v1;

import "go-broker/internal/proto/types.proto";

option go_package = "driftpursuit/broker/internal/proto/pb;pb";
option java_multiple_files = true;
option java_package = "build.buf.driftpursuit.networking.v1";

// RadarFrame carries processed sensor contacts for a single sweep.
message RadarFrame {
  string schema_version = 1;
  uint64 frame_id = 2;
  string emitter_entity_id = 3;
  int64 captured_at_ms = 4;
  repeated RadarContact contacts = 5;
}

// RadarContact bundles detections originating from a single sensor source.
message RadarContact {
  string schema_version = 1;
  string source_entity_id = 2;
  repeated RadarContactEntry entries = 3;
}

// RadarContactEntry captures the per-target solution produced by the radar.
message RadarContactEntry {
  string target_entity_id = 1;
  Vector3 position = 2;
  Vector3 velocity = 3;
  double confidence = 4;
  bool occluded = 5;
  InterestTier suggested_tier = 6;
}
